# expo-whisper-app

./: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
modules/expo-whisper/: .gitignore  ExpoWhisper.podspec  README.md  app.json  expo-module.config.json  index.ts  package.json  tsconfig.json
modules/expo-whisper/android/: CMakeLists.txt  build.gradle  settings.gradle
modules/expo-whisper/android/app/: build.gradle
modules/expo-whisper/android/app/src/main/java/com/expowhisper/: MainActivity.kt  MainApplication.kt
modules/expo-whisper/android/app/src/main/res/values/: strings.xml
modules/expo-whisper/android/src/main/: AndroidManifest.xml
modules/expo-whisper/android/src/main/cpp/: whisper-jni.cpp
modules/expo-whisper/android/src/main/java/expo/modules/whisper/: AudioBufferManager.kt  ExpoWhisperModule.kt  WhisperContext.kt
modules/expo-whisper/android/src/main/jni/: CMakeLists.txt  whisper_jni.cpp
modules/expo-whisper/cpp/: ggml.c  whisper.cpp
modules/expo-whisper/cpp/ggml-cpu/: vec.h
modules/expo-whisper/ios/: AudioBufferManager.swift  ExpoWhisperModule.swift  Podfile  WhisperContext.swift  WhisperWrapper.h  WhisperWrapper.mm
modules/expo-whisper/ios/src/: AudioBufferManager.swift  ExpoWhisperModule.swift  WhisperContext.swift  WhisperWrapper.h  WhisperWrapper.mm
modules/expo-whisper/src/: AudioRecorder.ts  ExpoWhisper.ts  ExpoWhisper.types.ts  NativeModuleWrapper.ts  RealtimeTranscriber.ts  Whisper.ts  modelDownloader.ts  useWhisper.ts
modules/expo-whisper/src/hooks/: index.ts  useRealtimeTranscription.ts  useWhisper.ts  useWhisperMetrics.ts
modules/expo-whisper/src/operations/: ContextPool.ts  ErrorHandler.ts  EventBridge.ts  JobCoordinator.ts  index.ts
modules/expo-whisper/src/types/: common.ts  errors.ts  index.ts  operations.ts  whisper.ts
modules/expo-whisper/src/utils/: AppHelpers.ts  AudioProcessing.ts  Converters.ts  Logger.ts  ModelDownloader.ts  Validators.ts  index.ts
